[SAM] update to gradle 2.5 + initial POC for Yaml ussage